recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
  if(levels>0){
     ^Sierpinski:3: error: not found: value levels
    var nL = levels-1		// newLevel
             ^Sierpinski:14: error: not found: value levels
  }else if(levels==0){
           ^