recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if(levels>0){
    var newLength = length/2
    var nL = levels-1		// newLevel
    
     
     sierpinski(nL,newLength)
     right(120)
     sierpinski(nL,newLength)
     right(120)
     
     avance(length)
    
    
  }else if(levels==0){
    avance(length)
  }
}